  -keyword "eventTimeTracking" is used to constraint the solver to
  explictly compute solution at event time (source/patch events)

- groundwaterFoam

  - The non-convergence of the Picard's algorithm now forces the solver to
  recompute the time iteration reducing the time step
  - add specific storage term (Ss) to the Richards' formulation

- groundwater2DFoam

  - solver adapted to handle uniform or non-uniform infiltration event (also
  accept mesh conformal event => consider as uniform infiltration)
  
- groundwaterTransportFoam

  - The non-convergence of the Picard's algorithm now forces the solver to
  recompute the time iteration reducing the time step
  - CSV output fixed
  - add specific storage term (Ss) to the Richards' formulation

- groundwaterTransport2DFoam

  - new solver coupling 2D water modeling (groundwater2DFoam) with 2D scalar
  transport (porousScalarTransport2DFoam)

### Libraries

- toolsGIS

  - uniformInfiltrationEventFile replaced by infiltrationEventFile
  infiltration for groundwater2DFoam can be uniform or non-uniform (value
  specified at each time for each cell in event file)

- eventFlux
  - now accept zero flux field (phi=0)
  - FatalError is handle if fixed flux > 0 and phi = 0

- porousModels

  - relativePermeabilityModel/capillarityModel has new function Se() which
  return effective saturation.

### Tutorials

- fix event keywords in several tutorials

- cleaning configuration files removing useless keywords/dictionaries

************************
*** PMFv1906
*** Event file generalization + seepage/forcing term for 2D solvers
************************

### Solvers

- Global :

  - Event file can be specified in transportProperties to force the solver
    to compute solution at given date time.
    eventFileSource for volumetric/mass event :
    eventFilePatch for infiltration/fixed flux event on BC
    eventFileOutput to specify write times

  - solvers with injection/extraction terms are now conservative using Euler